Moved current player message to correct position